added a basic nav bar

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="navi">
+        <div class="navi-item">
+            hiijioijijoi
+        </div> 
+    </div>
+    <div
     <div class="row">
         <div class="col-1">.col-1</div>
         <div class="col-1">.col-1</div>
